--- a/index.html
+++ b/index.html
@@ -7,81 +7,116 @@
     <style>
         body { 
             margin: 0; 
-            /* ICI : On a mis .png pour le fond */
-            background: #2d1b42 url('fond.png') no-repeat center center fixed; 
+            /* ICI : J'ai mis ton image IMG_6777 pour le fond */
+            background: #1a0f26 url('IMG_6777.png') no-repeat center center fixed; 
             background-size: cover;
             font-family: sans-serif;
             color: white;
             text-align: center;
-            overflow: hidden;
         }
 
-        .gold-counter {
-            background: rgba(0,0,0,0.8);
+        .top-bar {
+            background: rgba(0, 0, 0, 0.8);
             padding: 15px;
-            font-size: 28px;
-            color: #ffcc00;
             border-bottom: 4px solid #ffcc00;
-            font-weight: bold;
+            display: flex;
+            justify-content: space-around;
+            font-size: 1.2rem;
         }
 
-        .character-container {
-            margin-top: 10vh;
+        .game-area {
+            height: 60vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
 
-        /* ICI : On a mis .png pour le personnage */
-        .character {
-            width: 250px;
-            height: 250px;
-            background: url('assets.png') no-repeat center;
+        /* ICI : J'ai mis ton image IMG_6778 pour le sorcier */
+        .sorcier {
+            width: 200px;
+            height: 200px;
+            background: url('IMG_6778.png') no-repeat center;
             background-size: contain;
-            margin: 0 auto;
-            animation: bounce 2s infinite ease-in-out;
-            filter: drop-shadow(0 10px 15px rgba(0,0,0,0.5));
+            animation: levitation 3s infinite ease-in-out;
         }
 
-        @keyframes bounce {
-            0%, 100% { transform: translateY(0) scale(1); }
-            50% { transform: translateY(-25px) scale(1.05); }
+        @keyframes levitation {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-20px); }
         }
 
-        button {
+        .upgrade-section {
+            background: rgba(45, 27, 66, 0.95);
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            padding: 20px 0;
+            border-top: 3px solid #ffcc00;
+        }
+
+        .btn-upgrade {
             background: #4CAF50;
             color: white;
             border: none;
-            padding: 20px 50px;
-            font-size: 22px;
-            border-radius: 20px;
-            margin-top: 30px;
-            box-shadow: 0 8px #2e7d32;
+            padding: 15px 30px;
+            border-radius: 12px;
             font-weight: bold;
-            active: transform: translateY(4px);
-        }
-
-        button:active {
-            transform: translateY(4px);
-            box-shadow: 0 4px #2e7d32;
+            box-shadow: 0 5px #2e7d32;
         }
     </style>
 </head>
 <body>
-    <div class="gold-counter">💰 OR: <span id="gold">0</span></div>
-    
-    <div class="character-container">
-        <div class="character"></div>
-        <h2 style="text-shadow: 2px 2px 10px black;">Apprenti Sorcier</h2>
-        <button onclick="clickGold()">TAPPORE L'OR !</button>
+
+    <div class="top-bar">
+        <div>💰 <span id="gold">0</span></div>
+        <div>⚡ <span id="gps">0</span>/s</div>
+    </div>
+
+    <div class="game-area">
+        <div class="sorcier" onclick="clickSorcier()"></div>
+        <h2>SORCIER LVL <span id="lvl">1</span></h2>
+    </div>
+
+    <div class="upgrade-section">
+        <p>Améliorer : <span id="cost">50</span> 💰</p>
+        <button class="btn-upgrade" onclick="buyUpgrade()">BOOSTER !</button>
     </div>
 
     <script>
-        let or = 0;
-        function clickGold() {
-            or += 10;
-            document.getElementById('gold').innerText = or;
-            
-            // Petit effet de vibration quand on clique
-            navigator.vibrate(50); 
+        let gold = 0;
+        let level = 1;
+        let goldPerSecond = 0;
+        let cost = 50;
+
+        function updateUI() {
+            document.getElementById('gold').innerText = Math.floor(gold);
+            document.getElementById('gps').innerText = goldPerSecond.toFixed(1);
+            document.getElementById('lvl').innerText = level;
+            document.getElementById('cost').innerText = cost;
         }
+
+        function clickSorcier() {
+            gold += level;
+            updateUI();
+        }
+
+        function buyUpgrade() {
+            if (gold >= cost) {
+                gold -= cost;
+                level++;
+                goldPerSecond += 1;
+                cost = Math.floor(cost * 1.5);
+                updateUI();
+            }
+        }
+
+        setInterval(() => {
+            gold += goldPerSecond;
+            updateUI();
+        }, 1000);
+
+        updateUI();
     </script>
 </body>
 </html>
